# tech-trends

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.bat
docs/: architecture.md  cli-reference.md  configuration.md  deployment.md
src/: config.rs  lib.rs  main.rs
src/crawlers/: arxiv.rs  book.rs  github.rs  hn.rs  mod.rs  patent.rs
src/db/: mod.rs  schema.rs
src/llm/: client.rs  mod.rs
src/models/: mod.rs  story.rs  topic.rs
src/services/: backtest.rs  calibration.rs  chat.rs  digest.rs  forecast.rs  indexer.rs  mod.rs  topic.rs
src/vector/: embedding.rs  mod.rs  store.rs
